moved to subfolder

--- a/collate-attributes/Dockerfile
+++ b/collate-attributes/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:2.7-alpine
 
-COPY build_csv.py /
+COPY collate-attributes.py /
 RUN ["pip", "install", "requests", "unicodecsv", "inflection"]
 
 ENTRYPOINT ["python", "/collate-attributes.py"]
