Create the Docker container for the create-csv routine

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,13 @@ services:
       context: ./collate-attributes
     volumes:
       - ./data:/data
+
+  create-csv:
+    build: 
+      context: ./create-csv
+    volumes:
+      - ./data:/data
+      - ./output:/output
     
   neo4j-server:
     image: neo4j:latest
