--- a/neo4j-server-local/conf/neo4j.conf
+++ b/neo4j-server-local/conf/neo4j.conf
@@ -31,7 +31,7 @@ dbms.security.auth_enabled=false
 # rest for the page cache.
 # The default page cache memory assumes the machine is dedicated to running
 # Neo4j, and is heuristically set to 50% of RAM minus the max Java heap size.
-dbms.memory.pagecache.size=512M
+#dbms.memory.pagecache.size=10g
 
 #*****************************************************************
 # Network connector configuration
@@ -55,7 +55,7 @@ dbms.connector.https.type=HTTP
 dbms.connector.https.enabled=true
 dbms.connector.https.encryption=TLS
 # To accept non-local HTTPS connection, change 'localhost' to '0.0.0.0'
-dbms.connector.https.address=0.0.0.0:7473
+dbms.connector.https.address=localhost:7473
 
 # Number of Neo4j worker threads.
 #dbms.threads.worker_count=
@@ -106,7 +106,7 @@ dbms.connector.https.address=0.0.0.0:7473
 #dbms.security.allow_csv_import_from_file_urls=true
 
 # Retention policy for transaction logs needed to perform recovery and backups.
-dbms.tx_log.rotation.retention_policy=100M size
+#dbms.tx_log.rotation.retention_policy=7 days
 
 # Enable a remote shell server which Neo4j Shell clients can log in to.
 #dbms.shell.enabled=true
@@ -126,5 +126,3 @@ dbms.tx_log.rotation.retention_policy=100M size
 # neo4j-server-examples under /examples/unmanaged, resulting in a final URL of
 # http://localhost:7474/examples/unmanaged/helloworld/{nodeId}
 #dbms.unmanaged_extension_classes=org.neo4j.examples.server.unmanaged=/examples/unmanaged
-
-dbms.memory.pagecache.size=512M
