Update the configuration for local neo4j server

--- a/neo4j-server-local/conf/neo4j.conf
+++ b/neo4j-server-local/conf/neo4j.conf
@@ -31,7 +31,7 @@ dbms.security.auth_enabled=false
 # rest for the page cache.
 # The default page cache memory assumes the machine is dedicated to running
 # Neo4j, and is heuristically set to 50% of RAM minus the max Java heap size.
-#dbms.memory.pagecache.size=10g
+dbms.memory.pagecache.size=6g
 
 #*****************************************************************
 # Network connector configuration
@@ -58,7 +58,7 @@ dbms.connector.https.encryption=TLS
 dbms.connector.https.address=localhost:7473
 
 # Number of Neo4j worker threads.
-#dbms.threads.worker_count=
+dbms.threads.worker_count=32
 
 #*****************************************************************
 # Logging configuration
