--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,18 +20,6 @@ services:
     volumes:
       - ./data:/data
     
-  neo4j-server:
-    build: 
-      context: .
-      dockerfile: ./neo4j-server/Dockerfile
-    image: biosamples:neo4j-server
-    environment:
-        NEO4J_AUTH: none
-    ports:
-        - "7473:7473"
-        - "7474:7474"
-        - "7687:7687"
-    
   neo4j-server-local:
     image: neo4j:3.0.6
     environment:
@@ -44,6 +32,17 @@ services:
         - "7474:7474"
         - "7687:7687"
 #    command: dump-config
+
+
+  neo4j-analysis:
+    build: 
+      context: ./neo4j-analysis
+    volumes:
+      - ./neo4j-analysis:/neo4j-analysis
+    depends_on:
+      - neo4j-server-local
+    environment:
+      - DISPLAY
     
     
 #allowing docker-compose to create a new network can break internal connectivty on host  
