--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,12 @@ services:
     volumes:
       - ./data:/data
 
+  collate-efo:
+    build:
+      context: ./collate-efo
+    volumes:
+      - ./data:/data
+
   #takes about 45min
   create-csv:
     build: 
@@ -33,7 +39,6 @@ services:
         - "7687:7687"
 #    command: dump-config
 
-
   neo4j-analysis:
     build: 
       context: ./neo4j-analysis
@@ -42,11 +47,14 @@ services:
     depends_on:
       - neo4j-server-local
     entrypoint:
-      - python 
+      - ./wait-for-it.sh
+      - neo4j-server-local:7474
+      - --
+      - python -u
       - neo4j-analysis/neo4j-analysis.py
     
     
-#allowing docker-compose to create a new network can break internal connectivty on host  
+#allowing docker-compose to create a new network can break internal connectivty on host
 networks:
   #need to move default network to a different subnet to avoid conflict with local subnet
   default:
