simplified collate-efo to avoid bash

--- a/collate-efo/Dockerfile
+++ b/collate-efo/Dockerfile
@@ -3,4 +3,6 @@ FROM python:2.7-alpine
 COPY collate-efo.py /
 RUN ["pip", "install", "requests", "unicodecsv"]
 
-ENTRYPOINT ["python", "-u", "/collate-efo.py"]
+COPY entrypoint.sh /
+
+ENTRYPOINT ["sh", "entrypoint.sh"]
