Add a correction container to apply local database correction, start a new python script with the obsolete terms update

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,5 +55,21 @@ services:
       - python
       - -u
       - neo4j-analysis/neo4j-analysis.py
+
+  neo4j-correct:
+    build:
+      context: ./neo4j-correct
+    volumes:
+      - ./neo4j-analysis:/neo4j-analysis
+      - ./neo4j-correct:/neo4j-correct
+    depends_on:
+      - neo4j-server-local
+    entrypoint:
+      - ./wait-for-it.sh
+      - neo4j-server-local:7474
+      - --
+      - python
+      - -u
+      - neo4j-correct/neo4j-correct.py
     
     
