Change label for collect-efo task

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,9 @@ services:
     volumes:
       - ./data:/data
 
-  collate-efo:
+  collate-ontologies:
     build:
-      context: ./collate-efo
+      context: ./collate-ontologies
     volumes:
       - ./data:/data
 
