Change dockerfile for collate-ontologies

--- a/collate-ontologies/Dockerfile
+++ b/collate-ontologies/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:2.7-alpine
 
-COPY collate-efo.py /
+COPY collate-ontologies.py /
 RUN ["pip", "install", "requests", "unicodecsv"]
 
 COPY entrypoint.sh /
