--- a/collate-ontologies/Dockerfile
+++ b/collate-ontologies/Dockerfile
@@ -1,8 +1,8 @@
 FROM python:2.7-alpine
 
-COPY collate-ontologies.py /
-RUN ["pip", "install", "requests", "unicodecsv"]
+RUN ["pip", "install", "requests", "unicodecsv", "futures", "requests-futures"]
 
+COPY collate-ontologies.py /
 COPY entrypoint.sh /
 
 ENTRYPOINT ["sh", "entrypoint.sh"]
