Add apoc plugin to the neo4j-server-local container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,9 +27,12 @@ services:
       - ./data:/data
     
   neo4j-server-local:
-    image: neo4j:3.0.6
-    environment:
-        NEO4J_AUTH: none
+    #image: neo4j:3.0.6
+    build:
+        context: ./neo4j-server-local
+    #environment:
+    #    NEO4J_AUTH: none
+    #    NEO4J_HOME: /var/lib/neo4j
     volumes:
         - ./data:/data
         - ./neo4j-server-local/conf:/conf
@@ -37,7 +40,6 @@ services:
         - "7473:7473"
         - "7474:7474"
         - "7687:7687"
-#    command: dump-config
 
   #to run this container use a command like:
   #docker-compose run --service-ports neo4j-analysis [ARGS]
