--- a/neo4j-server-local/Dockerfile
+++ b/neo4j-server-local/Dockerfile
@@ -7,4 +7,4 @@ ENV APOC_URI "https://github.com/neo4j-contrib/neo4j-apoc-procedures/releases/do
 RUN curl --show-error --location --output $NEO4J_HOME/plugins/apoc-3.0.4.1-all.jar $APOC_URI 
 EXPOSE 7474 7473 7687
 
-CMD ["neo4j"]]
+CMD ["neo4j"]
