--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,8 +87,11 @@ services:
       - python
       - -u
       - neo4j-correct/neo4j-correct.py
-    
-    
+
+  zooma-confidence:
+    build:
+      context: ./zooma-confidence
+
 #allowing docker-compose to create a new network can break internal connectivty on host
 networks:
   #need to move default network to a different subnet to avoid conflict with local subnet
